Update index portfolio css - add icons and cover

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </head>
 
   <body>
-    <!-- ====== -->
+    <!-- ------ -->
     <!-- Header -->
     <!-- ====== -->
     <header>
@@ -72,14 +72,28 @@
                   <a
                     class="link-contact"
                     href="mailto:info@devstudio.com"
-                    >info@devstudio.com</a
+                    ><svg
+                      width="16"
+                      height="12"
+                      class="icon-grey"
+                    >
+                      <use href="./images/icons.svg#icon-envelope"></use>
+                    </svg>
+                    info@devstudio.com</a
                   >
                 </li>
                 <li>
                   <a
                     class="link-contact"
                     href="tel:+48111111111"
-                    >+48 111 111 111</a
+                    ><svg
+                      width="16"
+                      height="12"
+                      class="icon-grey"
+                    >
+                      <use href="./images/icons.svg#icon-smartphone"></use>
+                    </svg>
+                    +48 111 111 111</a
                   >
                 </li>
               </ul>
@@ -88,10 +102,11 @@
         </div>
       </div>
     </header>
-    <!-- ============ -->
+    <!-- ------------ -->
     <!-- Main content -->
     <!-- ============ -->
     <main>
+      <!-- Main title section -->
       <section class="grey-rectangle section">
         <div class="container">
           <div class="main-title-wrap">
@@ -105,12 +120,21 @@
           </div>
         </div>
       </section>
+      <!-- Lorem ipsum & what we do section -->
       <section class="section">
         <div class="container">
           <div class="main-txt-wrapper">
             <h2 class="hidden-title">This title has been set to mute the validator ;)</h2>
             <ul class="main-txt hidden-dot">
               <li>
+                <div class="main-txt-icon-box">
+                  <svg
+                    width="70"
+                    height="70"
+                  >
+                    <use href="./images/icons.svg#icon-antenna"></use>
+                  </svg>
+                </div>
                 <h3>LOREM IPSUM</h3>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
@@ -118,6 +142,14 @@
                 </p>
               </li>
               <li>
+                <div class="main-txt-icon-box">
+                  <svg
+                    width="70"
+                    height="70"
+                  >
+                    <use href="./images/icons.svg#icon-clock"></use>
+                  </svg>
+                </div>
                 <h3>LOREM IPSUM</h3>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
@@ -125,6 +157,14 @@
                 </p>
               </li>
               <li>
+                <div class="main-txt-icon-box">
+                  <svg
+                    width="70"
+                    height="70"
+                  >
+                    <use href="./images/icons.svg#icon-diagram"></use>
+                  </svg>
+                </div>
                 <h3>LOREM IPSUM</h3>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
@@ -132,6 +172,14 @@
                 </p>
               </li>
               <li>
+                <div class="main-txt-icon-box">
+                  <svg
+                    width="70"
+                    height="70"
+                  >
+                    <use href="./images/icons.svg#icon-astronaut"></use>
+                  </svg>
+                </div>
                 <h3>LOREM IPSUM</h3>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
@@ -171,6 +219,7 @@
           </div>
         </div>
       </section>
+      <!-- About us section -->
       <section class="about-us section">
         <div class="container">
           <h2 class="section-title">Nasz zespół</h2>
@@ -185,6 +234,33 @@
                 />
                 <h3>John Doe</h3>
                 <p>Product Designer</p>
+                <div class="icon-aboutus-wrapper">
+                  <svg
+                    width="44"
+                    height="44"
+                  >
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+
+                  <svg
+                    width="44"
+                    height="44"
+                  >
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                  <svg
+                    width="44"
+                    height="44"
+                  >
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                  <svg
+                    width="44"
+                    height="44"
+                  >
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </div>
               </li>
               <li>
                 <img
@@ -195,6 +271,33 @@
                 />
                 <h3>John Doe</h3>
                 <p>Frontend Developer</p>
+                <div class="icon-aboutus-wrapper">
+                  <svg
+                    width="44"
+                    height="44"
+                  >
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+
+                  <svg
+                    width="44"
+                    height="44"
+                  >
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                  <svg
+                    width="44"
+                    height="44"
+                  >
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                  <svg
+                    width="44"
+                    height="44"
+                  >
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </div>
               </li>
               <li>
                 <img
@@ -205,6 +308,33 @@
                 />
                 <h3>John Doe</h3>
                 <p>Marketing</p>
+                <div class="icon-aboutus-wrapper">
+                  <svg
+                    width="44"
+                    height="44"
+                  >
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+
+                  <svg
+                    width="44"
+                    height="44"
+                  >
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                  <svg
+                    width="44"
+                    height="44"
+                  >
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                  <svg
+                    width="44"
+                    height="44"
+                  >
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </div>
               </li>
               <li>
                 <img
@@ -215,19 +345,104 @@
                 />
                 <h3>John Doe</h3>
                 <p>UI Designer</p>
+                <div class="icon-aboutus-wrapper">
+                  <svg
+                    width="44"
+                    height="44"
+                  >
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+
+                  <svg
+                    width="44"
+                    height="44"
+                  >
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                  <svg
+                    width="44"
+                    height="44"
+                  >
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                  <svg
+                    width="44"
+                    height="44"
+                  >
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <!-- Our customers section  -->
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title">Nasi klienci</h2>
+          <div class="our-customers-wrapper">
+            <ul class="hidden-dot our-customers-box">
+              <li>
+                <svg
+                  width="106"
+                  height="64"
+                >
+                  <use href="./images/icons.svg#icon-yaco"></use>
+                </svg>
+              </li>
+              <li>
+                <svg
+                  width="106"
+                  height="64"
+                >
+                  <use href="./images/icons.svg#icon-company-tagline"></use>
+                </svg>
+              </li>
+              <li>
+                <svg
+                  width="106"
+                  height="64"
+                >
+                  <use href="./images/icons.svg#icon-company"></use>
+                </svg>
+              </li>
+              <li>
+                <svg
+                  width="106"
+                  height="64"
+                >
+                  <use href="./images/icons.svg#icon-foster"></use>
+                </svg>
+              </li>
+              <li>
+                <svg
+                  width="106"
+                  height="64"
+                >
+                  <use href="./images/icons.svg#icon-brand"></use>
+                </svg>
+              </li>
+              <li>
+                <svg
+                  width="106"
+                  height="64"
+                >
+                  <use href="./images/icons.svg#icon-company-tagline-square"></use>
+                </svg>
               </li>
             </ul>
           </div>
         </div>
       </section>
     </main>
-    <!-- ====== -->
+    <!-- ------ -->
     <!-- Footer -->
     <!-- ====== -->
     <footer>
       <div class="footer-box">
-        <div class="container">
-          <div class="footer-div">
+        <div class="container footer-wrapper">
+          <div class="footer-address">
             <a
               class="logo-footer logo-hoover-focus"
               href="index.html"
@@ -245,6 +460,36 @@
                 </li>
               </ul>
             </address>
+          </div>
+          <div class="footer-socialmedia">
+            <p>Dołącz do nas</p>
+            <div class="icon-footer-wrapper">
+              <svg
+                width="44"
+                height="44"
+              >
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+
+              <svg
+                width="44"
+                height="44"
+              >
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+              <svg
+                width="44"
+                height="44"
+              >
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+              <svg
+                width="44"
+                height="44"
+              >
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </div>
           </div>
         </div>
       </div>
