--- a/portfolio.html
+++ b/portfolio.html
@@ -71,14 +71,28 @@
                   <a
                     class="link-contact"
                     href="mailto:info@devstudio.com"
-                    >info@devstudio.com</a
+                    ><svg
+                      width="16"
+                      height="12"
+                      class="icon-grey"
+                    >
+                      <use href="./images/icons.svg#icon-envelope"></use>
+                    </svg>
+                    info@devstudio.com</a
                   >
                 </li>
                 <li>
                   <a
                     class="link-contact"
                     href="tel:+48111111111"
-                    >+48 111 111 111</a
+                    ><svg
+                      width="16"
+                      height="12"
+                      class="icon-grey"
+                    >
+                      <use href="./images/icons.svg#icon-smartphone"></use>
+                    </svg>
+                    +48 111 111 111</a
                   >
                 </li>
               </ul>
@@ -94,6 +108,7 @@
       <section class="section">
         <div class="container">
           <h2 class="hidden-title">This title has been set to mute the validator ;)</h2>
+          <!-- Filter DIV button -->
           <div class="portfolio-btn-wrap">
             <ul class="hidden-dot portfolio-btn-inline">
               <li>
@@ -138,6 +153,7 @@
               </li>
             </ul>
           </div>
+          <!-- Portfolio cards section -->
           <div class="portfolio-box-wrap">
             <ul class="hidden-dot portfolio-box">
               <li>
@@ -258,8 +274,8 @@
     <!-- ====== -->
     <footer>
       <div class="footer-box">
-        <div class="container">
-          <div class="footer-div">
+        <div class="container footer-wrapper">
+          <div class="footer-address">
             <a
               class="logo-footer logo-hoover-focus"
               href="index.html"
@@ -277,6 +293,36 @@
                 </li>
               </ul>
             </address>
+          </div>
+          <div class="footer-socialmedia">
+            <p>Dołącz do nas</p>
+            <div class="icon-footer-wrapper">
+              <svg
+                width="44"
+                height="44"
+              >
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+
+              <svg
+                width="44"
+                height="44"
+              >
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+              <svg
+                width="44"
+                height="44"
+              >
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+              <svg
+                width="44"
+                height="44"
+              >
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </div>
           </div>
         </div>
       </div>
