Update index portfolio css and add new icons set

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </head>
 
   <body>
-    <!-- ------ -->
+    <!-- ====== -->
     <!-- Header -->
     <!-- ====== -->
     <header>
@@ -102,7 +102,7 @@
         </div>
       </div>
     </header>
-    <!-- ------------ -->
+    <!-- ============ -->
     <!-- Main content -->
     <!-- ============ -->
     <main>
@@ -235,31 +235,42 @@
                 <h3>John Doe</h3>
                 <p>Product Designer</p>
                 <div class="icon-aboutus-wrapper">
-                  <svg
-                    width="44"
-                    height="44"
-                  >
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-
-                  <svg
-                    width="44"
-                    height="44"
-                  >
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                  <svg
-                    width="44"
-                    height="44"
-                  >
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                  <svg
-                    width="44"
-                    height="44"
-                  >
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
+                  <a
+                    href="#"
+                    class="icon-aboutus-box"
+                    ><svg
+                      width="20"
+                      height="20"
+                    >
+                      <use href="./images/icons.svg#icon-instagram"></use></svg
+                  ></a>
+                  <a
+                    href="#"
+                    class="icon-aboutus-box"
+                    ><svg
+                      width="20"
+                      height="20"
+                    >
+                      <use href="./images/icons.svg#icon-twitter"></use></svg
+                  ></a>
+                  <a
+                    href="#"
+                    class="icon-aboutus-box"
+                    ><svg
+                      width="20"
+                      height="20"
+                    >
+                      <use href="./images/icons.svg#icon-facebook"></use></svg
+                  ></a>
+                  <a
+                    href="#"
+                    class="icon-aboutus-box"
+                    ><svg
+                      width="20"
+                      height="20"
+                    >
+                      <use href="./images/icons.svg#icon-linkedin"></use></svg
+                  ></a>
                 </div>
               </li>
               <li>
@@ -272,31 +283,42 @@
                 <h3>John Doe</h3>
                 <p>Frontend Developer</p>
                 <div class="icon-aboutus-wrapper">
-                  <svg
-                    width="44"
-                    height="44"
-                  >
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-
-                  <svg
-                    width="44"
-                    height="44"
-                  >
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                  <svg
-                    width="44"
-                    height="44"
-                  >
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                  <svg
-                    width="44"
-                    height="44"
-                  >
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
+                  <a
+                    href="#"
+                    class="icon-aboutus-box"
+                    ><svg
+                      width="20"
+                      height="20"
+                    >
+                      <use href="./images/icons.svg#icon-instagram"></use></svg
+                  ></a>
+                  <a
+                    href="#"
+                    class="icon-aboutus-box"
+                    ><svg
+                      width="20"
+                      height="20"
+                    >
+                      <use href="./images/icons.svg#icon-twitter"></use></svg
+                  ></a>
+                  <a
+                    href="#"
+                    class="icon-aboutus-box"
+                    ><svg
+                      width="20"
+                      height="20"
+                    >
+                      <use href="./images/icons.svg#icon-facebook"></use></svg
+                  ></a>
+                  <a
+                    href="#"
+                    class="icon-aboutus-box"
+                    ><svg
+                      width="20"
+                      height="20"
+                    >
+                      <use href="./images/icons.svg#icon-linkedin"></use></svg
+                  ></a>
                 </div>
               </li>
               <li>
@@ -309,31 +331,42 @@
                 <h3>John Doe</h3>
                 <p>Marketing</p>
                 <div class="icon-aboutus-wrapper">
-                  <svg
-                    width="44"
-                    height="44"
-                  >
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-
-                  <svg
-                    width="44"
-                    height="44"
-                  >
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                  <svg
-                    width="44"
-                    height="44"
-                  >
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                  <svg
-                    width="44"
-                    height="44"
-                  >
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
+                  <a
+                    href="#"
+                    class="icon-aboutus-box"
+                    ><svg
+                      width="20"
+                      height="20"
+                    >
+                      <use href="./images/icons.svg#icon-instagram"></use></svg
+                  ></a>
+                  <a
+                    href="#"
+                    class="icon-aboutus-box"
+                    ><svg
+                      width="20"
+                      height="20"
+                    >
+                      <use href="./images/icons.svg#icon-twitter"></use></svg
+                  ></a>
+                  <a
+                    href="#"
+                    class="icon-aboutus-box"
+                    ><svg
+                      width="20"
+                      height="20"
+                    >
+                      <use href="./images/icons.svg#icon-facebook"></use></svg
+                  ></a>
+                  <a
+                    href="#"
+                    class="icon-aboutus-box"
+                    ><svg
+                      width="20"
+                      height="20"
+                    >
+                      <use href="./images/icons.svg#icon-linkedin"></use></svg
+                  ></a>
                 </div>
               </li>
               <li>
@@ -346,31 +379,34 @@
                 <h3>John Doe</h3>
                 <p>UI Designer</p>
                 <div class="icon-aboutus-wrapper">
-                  <svg
-                    width="44"
-                    height="44"
-                  >
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-
-                  <svg
-                    width="44"
-                    height="44"
-                  >
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                  <svg
-                    width="44"
-                    height="44"
-                  >
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                  <svg
-                    width="44"
-                    height="44"
-                  >
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
+                  <a href="#"
+                    ><svg
+                      width="20"
+                      height="20"
+                    >
+                      <use href="./images/icons.svg#icon-instagram"></use></svg
+                  ></a>
+                  <a href="#"
+                    ><svg
+                      width="20"
+                      height="20"
+                    >
+                      <use href="./images/icons.svg#icon-twitter"></use></svg
+                  ></a>
+                  <a href="#"
+                    ><svg
+                      width="20"
+                      height="20"
+                    >
+                      <use href="./images/icons.svg#icon-facebook"></use></svg
+                  ></a>
+                  <a href="#"
+                    ><svg
+                      width="20"
+                      height="20"
+                    >
+                      <use href="./images/icons.svg#icon-linkedin"></use></svg
+                  ></a>
                 </div>
               </li>
             </ul>
@@ -382,66 +418,65 @@
         <div class="container">
           <h2 class="section-title">Nasi klienci</h2>
           <div class="our-customers-wrapper">
-            <ul class="hidden-dot our-customers-box">
-              <li>
-                <svg
-                  width="106"
-                  height="64"
-                >
-                  <use href="./images/icons.svg#icon-yaco"></use>
-                </svg>
-              </li>
-              <li>
-                <svg
-                  width="106"
-                  height="64"
-                >
-                  <use href="./images/icons.svg#icon-company-tagline"></use>
-                </svg>
-              </li>
-              <li>
-                <svg
-                  width="106"
-                  height="64"
-                >
-                  <use href="./images/icons.svg#icon-company"></use>
-                </svg>
-              </li>
-              <li>
-                <svg
-                  width="106"
-                  height="64"
-                >
-                  <use href="./images/icons.svg#icon-foster"></use>
-                </svg>
-              </li>
-              <li>
-                <svg
-                  width="106"
-                  height="64"
-                >
-                  <use href="./images/icons.svg#icon-brand"></use>
-                </svg>
-              </li>
-              <li>
-                <svg
-                  width="106"
-                  height="64"
-                >
-                  <use href="./images/icons.svg#icon-company-tagline-square"></use>
-                </svg>
-              </li>
-            </ul>
+            <a href="#">
+              <svg
+                width="170"
+                height="92"
+              >
+                <use href="./images/icons.svg#icon-Client1"></use>
+              </svg>
+            </a>
+            <a href="#">
+              <svg
+                width="170"
+                height="92"
+              >
+                <use href="./images/icons.svg#icon-Client2"></use>
+              </svg>
+            </a>
+            <a href="#">
+              <svg
+                width="170"
+                height="92"
+              >
+                <use href="./images/icons.svg#icon-Client3"></use>
+              </svg>
+            </a>
+            <a href="#">
+              <svg
+                width="170"
+                height="92"
+              >
+                <use href="./images/icons.svg#icon-Client4"></use>
+              </svg>
+            </a>
+            <a href="#">
+              <svg
+                width="170"
+                height="92"
+              >
+                <use href="./images/icons.svg#icon-Client5"></use>
+              </svg>
+            </a>
+            <a href="#">
+              <svg
+                width="170"
+                height="92"
+              >
+                <use href="./images/icons.svg#icon-Client6"></use>
+              </svg>
+            </a>
           </div>
         </div>
       </section>
     </main>
-    <!-- ------ -->
+    <!-- ====== -->
     <!-- Footer -->
     <!-- ====== -->
     <footer>
       <div class="footer-box">
         <div class="container footer-wrapper">
+          <!-- Adress section  -->
           <div class="footer-address">
             <a
               class="logo-footer logo-hoover-focus"
@@ -461,34 +496,38 @@
               </ul>
             </address>
           </div>
+          <!-- Social media section  -->
           <div class="footer-socialmedia">
             <p>Dołącz do nas</p>
             <div class="icon-footer-wrapper">
-              <svg
-                width="44"
-                height="44"
-              >
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-
-              <svg
-                width="44"
-                height="44"
-              >
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-              <svg
-                width="44"
-                height="44"
-              >
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-              <svg
-                width="44"
-                height="44"
-              >
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
+              <a href="#"
+                ><svg
+                  width="20"
+                  height="20"
+                >
+                  <use href="./images/icons.svg#icon-instagram"></use></svg
+              ></a>
+              <a href="#"
+                ><svg
+                  width="20"
+                  height="20"
+                >
+                  <use href="./images/icons.svg#icon-twitter"></use></svg
+              ></a>
+              <a href="#"
+                ><svg
+                  width="20"
+                  height="20"
+                >
+                  <use href="./images/icons.svg#icon-facebook"></use></svg
+              ></a>
+              <a href="#"
+                ><svg
+                  width="20"
+                  height="20"
+                >
+                  <use href="./images/icons.svg#icon-linkedin"></use></svg
+              ></a>
             </div>
           </div>
         </div>
