--- a/portfolio.html
+++ b/portfolio.html
@@ -275,6 +275,7 @@
     <footer>
       <div class="footer-box">
         <div class="container footer-wrapper">
+          <!-- Adress section  -->
           <div class="footer-address">
             <a
               class="logo-footer logo-hoover-focus"
@@ -294,34 +295,38 @@
               </ul>
             </address>
           </div>
+          <!-- Social media section  -->
           <div class="footer-socialmedia">
             <p>Dołącz do nas</p>
             <div class="icon-footer-wrapper">
-              <svg
-                width="44"
-                height="44"
-              >
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-
-              <svg
-                width="44"
-                height="44"
-              >
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-              <svg
-                width="44"
-                height="44"
-              >
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-              <svg
-                width="44"
-                height="44"
-              >
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
+              <a href="#"
+                ><svg
+                  width="20"
+                  height="20"
+                >
+                  <use href="./images/icons.svg#icon-instagram"></use></svg
+              ></a>
+              <a href="#"
+                ><svg
+                  width="20"
+                  height="20"
+                >
+                  <use href="./images/icons.svg#icon-twitter"></use></svg
+              ></a>
+              <a href="#"
+                ><svg
+                  width="20"
+                  height="20"
+                >
+                  <use href="./images/icons.svg#icon-facebook"></use></svg
+              ></a>
+              <a href="#"
+                ><svg
+                  width="20"
+                  height="20"
+                >
+                  <use href="./images/icons.svg#icon-linkedin"></use></svg
+              ></a>
             </div>
           </div>
         </div>
