Cleanup index portfolio css

--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,6 @@
                     ><svg
                       width="16"
                       height="12"
-                      class="icon-grey"
                     >
                       <use href="./images/icons.svg#icon-envelope"></use>
                     </svg>
@@ -88,7 +87,6 @@
                     ><svg
                       width="16"
                       height="12"
-                      class="icon-grey"
                     >
                       <use href="./images/icons.svg#icon-smartphone"></use>
                     </svg>
@@ -296,7 +294,7 @@
             </address>
           </div>
           <!-- Social media section  -->
-          <div class="footer-socialmedia">
+          <div class="footer-socialmmedia">
             <p>Dołącz do nas</p>
             <div class="icon-footer-wrapper">
               <a href="#"
