--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
                     ><svg
                       width="16"
                       height="12"
-                      class="icon-grey"
                     >
                       <use href="./images/icons.svg#icon-envelope"></use>
                     </svg>
@@ -89,7 +88,6 @@
                     ><svg
                       width="16"
                       height="12"
-                      class="icon-grey"
                     >
                       <use href="./images/icons.svg#icon-smartphone"></use>
                     </svg>
@@ -497,7 +495,7 @@
             </address>
           </div>
           <!-- Social media section  -->
-          <div class="footer-socialmedia">
+          <div class="footer-socialmmedia">
             <p>Dołącz do nas</p>
             <div class="icon-footer-wrapper">
               <a href="#"
